--- a/src/main/webapp/resources/assets/css/font-awesome.css
+++ b/src/main/webapp/resources/assets/css/font-awesome.css
@@ -814,7 +814,7 @@
 }
 .fa-dashboard:before,
 .fa-tachometer:before {
-  content: "\f0e4";
+  content: "\f015";
 }
 .fa-comment-o:before {
   content: "\f0e5";
