--- a/src/main/webapp/resources/assets/css/custom.css
+++ b/src/main/webapp/resources/assets/css/custom.css
@@ -2,7 +2,9 @@
 /*=============================================================
     Authour URI: www.binarycart.com
     License: Commons Attribution 3.0
+
     http://creativecommons.org/licenses/by/3.0/
+
     100% To use For Personal And Commercial Use.
     IN EXCHANGE JUST GIVE US CREDITS AND TELL YOUR FRIENDS ABOUT US
    
@@ -34,7 +36,7 @@ table {
     margin:10px 20px 10px 0px;
     background-color:#fff!important;
     padding:10px;
-    min-height:1000px;
+    min-height:850px;
 }
 
 .text-center {
@@ -365,8 +367,7 @@ line-height: 1.428571429;
      #page-wrapper{
                margin: 0 0 0 120px;
         padding: 15px 30px;
-        min-height: 1200px;
-		
+        min-height: 904px;
     }
 	
 	
@@ -393,4 +394,88 @@ line-height: 1.428571429;
     margin-top: -15px;
     margin-right:8px;
     background-color:#E20411;
+}
+
+
+/*==============================================
+    machine notice   
+    =============================================*/
+.notice-red{
+    background-color: #E6182E;
+    height: 50px;
+    margin-top:20px;
+    margin-bottom: 15px;
+    padding:10px;
+    border-radius:10px;
+}
+
+.notice-blue{
+    background-color: #00B3D9;
+    height: 50px;
+    margin-top:20px;
+    margin-bottom: 15px;
+    padding:10px;
+    border-radius:10px;
+}
+
+
+
+/*==============================================
+    toggle button  
+    =============================================*/
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 47px;
+  height: 25px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #da002f;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #da002f;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
