--- a/src/main/webapp/resources/assets/css/bootstrap.css
+++ b/src/main/webapp/resources/assets/css/bootstrap.css
@@ -1089,7 +1089,7 @@ pre code {
     float: left;
   }
   .col-md-12 {
-    width: 100%;
+        width: 100%;
   }
   .col-md-11 {
     width: 91.66666667%;
@@ -1122,7 +1122,7 @@ pre code {
     width: 16.66666667%;
   }
   .col-md-1 {
-    width: 8.33333333%;
+    width: 3.333333%%;
   }
   .col-md-pull-12 {
     right: 100%;
