--- a/src/main/webapp/resources/assets/css/custom.css
+++ b/src/main/webapp/resources/assets/css/custom.css
@@ -407,6 +407,7 @@ line-height: 1.428571429;
     margin-bottom: 15px;
     padding:10px;
     border-radius:10px;
+    text-align:center;
 }
 
 .notice-blue{
@@ -416,6 +417,7 @@ line-height: 1.428571429;
     margin-bottom: 15px;
     padding:10px;
     border-radius:10px;
+    text-align:center;
 }
 
 
