--- a/src/main/webapp/WEB-INF/views/admin/NewFile.html
+++ b/src/main/webapp/WEB-INF/views/admin/NewFile.html
@@ -27,7 +27,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="assets/img/lotte-logo.png" alt="lotte logo" align="middle" style="width:50px;position: relative;top: 50%;transform:translateY(-50%);"/></a>
+      <a class="navbar-brand"><img src="assets/img/lotte-logo.png" alt="lotte logo" align="middle" style="width:50px;position: relative;top: 50%;transform:translateY(-50%);"/></a>
    </div>
    <div>
       <div style="color: white;padding: 15px 50px 5px 50px;float: right;font-size: 16px; position: relative;top: 50%;">
